--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^12.1.10",
     "clsx": "^1.1.1",
     "cuid": "^2.1.8",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
